<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">朝颜无限</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="hint_input_message">Input message</string>
    <string name="btn_send">Send</string>
    <string name="btn_start_server">创建连接</string>
    <string name="btn_start_client">加入连接</string>
    <string name="server">Server</string>
    <string name="client">Client</string>
    <string name="send">Send</string>
    <string name="app_name_server">Server</string>
    <string name="app_name_client">Client</string>
    <string name="action_server_config">Server Config</string>
    <string name="action_client_config">Connect</string>
    <string name="menu_network_status">Network Status</string>
    <string name="menu_search">Search</string>
    <string name="btn_quit">Quit</string>
    <string name="btn_start">Start</string>
    <string name="funcions">Funcions</string>
    <string name="chat">Chat</string>
    <string name="label_applist">应用程序列表</string>
    <string name="wifiP2p_on">开启Wifi-Driect</string>
    <string name="userinfo_name">名称：</string>
    <string name="userinfo_name_hint">请输入用户名</string>
    <string name="userinfo_ip">IP：%s</string>
    <string name="userinfo_android_version">系統版本：%s</string>
    <string name="userinfo_message_saved">用户信息已保存</string>
    <string name="ui_menu_save">保存</string>
    <string name="lable_user_info">用户资料</string>
    <string name="menu_user_info">用户资料</string>
    <string name="btn_test_apps">Test apps</string>
    <string name="readme_file_transport_test">File Transport test.</string>
    <string name="login_dialog_title">用户连接</string>
    <string name="login_dialog_message">"用户：%s 请求连接。"</string>
    <string name="login_dialog_allow">"同意"</string>
    <string name="login_dialog_disallow">"拒绝"</string>
    <string name="user_info_setting">用户信息设置</string>
    <string name="login">登录</string>
    <string name="network_neighborhood">网上邻居</string>
    <string name="bluetooth_invite">蓝牙邀请</string>
    <string name="bluetooth_invite_tips">将本应用程序通过蓝牙发送给附近的好友</string>
    <string name="create_network">创建局域网络</string>
    <string name="create_network_tips">通过Wi-Fi创建一个网络连接</string>
    <string name="create_network_tips_connected">已连接</string>
    <string name="join_network">加入局域网络</string>
    <string name="join_network_tips">通过Wi-Fi加入一个已经创建的连接</string>
    <string name="join_network_tips_connected">已连接</string>
    <string name="network_share">局域网文件共享</string>
    <string name="network_share_tips">局域网共享您的文件或最爱</string>
    <string name="stop_file_share">文件共享已开启，点击停止共享</string>
    <string name="fileshare_label">远程服务器共享</string>
    <string name="access_server">访问远程服务器</string>
    <string name="no_connect">未连接，请先建立连接</string>
    <string name="network_users">局域网用户组</string>
    <string name="disconnect">退出局域网</string>
    <string name="network_creator">局域网创建者</string>
    <string name="creating_network">正在创建%s局域网络</string>
    <string name="choose_network_type_title">请选择网络类型</string>
    <string name="section_remote">远程服务器</string>
    <string name="section_local">本地文件</string>
    <string name="menu_paste">粘贴</string>
    <string name="operitor_title">操作</string>
    <string name="confirm_msg">确认删除 <xliff:g id="delete">%1$s</xliff:g> ?</string>
    <string name="help_title">帮助</string>
    <string name="settings_title">设置</string>
    <string name="settings_logout">退出朝颜天地</string>
    <string name="help_introduction">功能介绍</string>
    <string name="help_introduction_tips">介绍本程序基本功能的使用方法</string>
    <string name="help_suggestion">意见反馈</string>
    <string name="help_suggestion_tips">将您对本程序的建议和意见反馈给我们</string>
    <string name="help_check_update">检查新版本</string>
    <string name="help_current_version">当前版本号:%s</string>
    <string name="help_about">关于</string>
    <string name="settings_user_info">用户信息设置</string>
    <string name="settings_user_info_tips">重新设置用户信息</string>
    <string name="about_app_name_version">%1$s: %2$s</string>
    
    <string name="http_share_open_warning_dialog_title">零流量邀请</string>
    <string name="http_share_open_warning_dialog_message">使用零流量邀请将断开当前局域网，是否继续？</string>
    <string name="http_share_title">零流量邀请</string>
    <string name="http_share_first_step">第一步:</string>
    <string name="http_share_second_step">第二步:</string>
    <string name="http_share_first_step_tip">请好友打开手机WiFi，连接无线网络到：\n%s</string>
    <string name="http_share_second_step_tip1">打开浏览器，输入网址：\n%s</string>
    <string name="http_share_second_step_tip2">或者扫描二维码直接下载</string>
    <string name="back">返回</string>

</resources>