<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg" >

    <include
        android:id="@+id/layout_title"
        android:layout_alignParentTop="true"
        layout="@layout/ui_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_title" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/setting_item_bg_top"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="10dp" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/help_introduction"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/help_introduction_tips"
                        android:textColor="@color/gray"
                        android:textSize="12sp" />
                </LinearLayout>

                <include layout="@layout/ui_settings_dividerline" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/setting_item_bg_middle"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="10dp" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/help_suggestion"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/help_suggestion_tips"
                        android:textColor="@color/gray"
                        android:textSize="12sp" />
                </LinearLayout>

                <include layout="@layout/ui_settings_dividerline" />

                <LinearLayout
                    android:id="@+id/ll_help_check_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/setting_item_bg_bottom"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="10dp" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/help_check_update"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_help_current_version"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/help_current_version"
                        android:textColor="@color/gray"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_help_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/setting_item_bg"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="10dp" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_about"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>