<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/main_bg"
    android:orientation="vertical" >

    <!-- Title -->

    <include layout="@layout/ui_title" />

    <LinearLayout
        android:id="@+id/lv_network_neighborhood_bluetooth"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/blue_bg_selector"
        android:clickable="true" >

        <ImageView
            android:id="@+id/iv_ntwknb_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:src="@drawable/network_neighborhood_bluetooth" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_ntwknb_item1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bluetooth_invite"
                android:textColor="@color/text_black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_ntwknb_item2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/bluetooth_invite_tips"
                android:textColor="@color/text_blue"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/ui_network_neighborhood_dividerline" />

    <LinearLayout
        android:id="@+id/lv_network_neighborhood_create"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/blue_bg_selector"
        android:clickable="true" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:src="@drawable/network_neighborhood_create" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_network"
                android:textColor="@color/text_black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_network_create_tips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/create_network_tips"
                android:textColor="@color/text_blue"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/ui_network_neighborhood_dividerline" />

    <LinearLayout
        android:id="@+id/lv_network_neighborhood_join"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/blue_bg_selector"
        android:clickable="true" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:src="@drawable/network_neighborhood_join" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/join_network"
                android:textColor="@color/text_black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_network_join_tips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/join_network_tips"
                android:textColor="@color/text_blue"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/ui_network_neighborhood_dividerline" />

    <LinearLayout
        android:id="@+id/lv_network_neighborhood_share"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/blue_bg_selector"
        android:clickable="true" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:src="@drawable/network_neighborhood_share" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/network_share"
                android:textColor="@color/text_black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/network_share_tips"
                android:textColor="@color/text_blue"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>