<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg" >

    <include
        android:id="@+id/layout_title"
        android:layout_alignParentTop="true"
        layout="@layout/ui_title" />

    <Button
        android:id="@+id/btn_settings_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp"
        android:background="@drawable/button_bg"
        android:text="@string/settings_logout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_settings_logout"
        android:layout_below="@+id/layout_title" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/ll_settings_user_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/setting_item_bg"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="10dp" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_user_info" 
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_user_info_tips"
                    android:textColor="@color/gray"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>